--- a/public/css/style.css
+++ b/public/css/style.css
@@ -431,7 +431,7 @@ body {
     }
 
     .card-videos {
-        width: 400px !important;
+        width: 520px !important;
         height: 220px !important;
     }
 
@@ -446,7 +446,7 @@ body {
     }
 
     .card-videos {
-        width: 420px !important;
+        width: 520px !important;
         height: 300px !important;
     }
 
@@ -623,15 +623,24 @@ body {
     bottom: 0;
     padding: 2.5rem 1rem;
 
+
+
 }
 
 .card-price-footer-link {
     display: none;
 }
 
+.card-price:hover .card-price-footer {
+    /* transform: translateY(-10px); */
+bottom: 10px;
+    transition: all .4s ease;
+}
+
 .card-price:hover .card-price-footer-link {
     display: block;
-    transition: display 1s ease;
+
+
 }
 
 .container-img-started-about {
@@ -678,7 +687,7 @@ body {
     height: 62px;
     width: 62px;
     border-radius: 40px;
-    background-color: #fff;
+    background-color: transparent;
     font-size: 1rem;
     color: var(--color-primary);
     border: 1px solid var(--color-primary);
@@ -717,11 +726,7 @@ body {
     background-color: #e2e2e2;
 }
 
-.bg-step-1,
-.bg-step-2.bg-step-3 {
-    padding-top: 6rem !important;
-    padding-bottom: 6rem !important;
-}
+
 
 .accordion-button::after {
     width: 1.25rem;
@@ -761,7 +766,10 @@ body {
 @media screen and (min-width: 768px) {}
 
 @media screen and (max-width: 427px) {
-
+    .step-element{
+        padding-top: 4rem !important;
+        padding-bottom: 4rem !important;
+    }
     .training-hero-img{
         width: 100% !important;
         height: 450px !important;
@@ -1809,10 +1817,10 @@ body {
 
 
 
-@media (min-width:768px){
+/* @media (min-width:768px){
     .videos-controller{
-        width: 1400px;
-        margin-right: -70px;
+        width:990px;
+
     }
     .owl-item{
         width: 560px !important;
@@ -1824,7 +1832,81 @@ body {
     }
 }
 
+@media (min-width:992px){
+    .videos-controller{
+        width: 1160px;
+        margin-right: -1rem;
 
+    }
+    .owl-stage{
+        width: 3500px !important;
+    }
+}
+
+@media (min-width:1200px){
+    .videos-controller{
+        width: 1340px;
+        margin-right: -7rem;
+
+    }
+    .owl-stage{
+        width: 3500px !important;
+    }
+}
+@media (min-width:1400px){
+    .videos-controller{
+       width: 1520px;
+        margin-right: -1rem;
+    }
+    .owl-stage{
+        width: 3500px !important;
+    }
+} */
+
+@media (min-width:992px){
+
+    .videos-controller{
+        --a: 960px ;
+        --b: calc(100vw - 960px);
+        --c: calc(var(--b) / 2);
+        --d: calc(var(--a) + var(--c));
+        --e: calc(var(--c) + 72px);
+
+        width: var(--d);
+        margin-left: var(--e);
+    }
+
+}
+
+@media (min-width:1200px){
+
+    .videos-controller{
+        --a: 1140px ;
+        --b: calc(100vw - 1140px);
+        --c: calc(var(--b) / 2);
+        --d: calc(var(--a) + var(--c));
+        --e: calc(var(--c) + 72px);
+
+        width: var(--d);
+        margin-left: var(--e);
+    }
+
+}
+
+@media (min-width:1400px){
+
+    .videos-controller{
+        --a: 1320px ;
+        --b: calc(100vw - 1320px);
+        --c: calc(var(--b) / 2);
+        --d: calc(var(--a) + var(--c));
+        --e: calc(var(--c) + 72px);
+
+        width: var(--d);
+        margin-left: var(--e);
+    }
+
+}
 
 .full{
     height: 100%;
@@ -1834,4 +1916,25 @@ top: 0;
 bottom: 0;
 z-index: 5000;
 background: black;
+}
+
+
+
+
+section{
+    overflow: hidden;
+}
+
+
+@media (min-width:768px){
+    .step-element{
+        position: absolute;
+        top: 0px;
+        height: 100%;
+
+    }
+
+    .h-step-container{
+        height: 100vh;
+    }
 }
