--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1919,7 +1919,18 @@ z-index: 5000;
 background: black;
 }
 
+.el-100{
+    height: 100vh;
+}
 
+
+.el-fixed{
+    width: 100vw;
+    top: 0;
+bottom: 0;
+position: fixed;
+z-index: 5000;
+}
 
 
 section{
@@ -1928,7 +1939,7 @@ section{
 
 
 @media (max-width:768px){
-    
+
 
     .wb-swiper-h4{
         font-size: 18px;
@@ -1946,6 +1957,10 @@ section{
 
 
 @media (min-width:768px){
+    .wb-swiper-py-7{
+        padding-top: 3rem !important;
+        padding-bottom: 3rem !important;
+    }
     .step-element{
         position: absolute;
         top: 0px;
