--- a/public/css/style.css
+++ b/public/css/style.css
@@ -426,6 +426,17 @@ body {
 }
 
 @media (min-width: 992px) {
+    .container-img-ressource-methods {
+        width: 100% !important;
+        height: 220px;
+        overflow: hidden;
+    }
+    .step-element{
+        position: absolute;
+        top: 0px;
+        height: 100%;
+
+    }
     .container-wb {
         max-width: 760px;
     }
@@ -456,6 +467,11 @@ body {
 }
 
 @media (min-width: 1400px) {
+    .container-img-ressource-methods {
+        width: 100% !important;
+        height: 320px;
+        overflow: hidden;
+    }
     .container-wb {
         max-width: 1120px;
     }
@@ -669,7 +685,6 @@ body {
 
 .container-img-ressource-methods {
     width: 100% !important;
-    height: 320px;
     overflow: hidden;
 }
 
@@ -1821,61 +1836,11 @@ body {
     border : 1px solid #ce3200;
 }
 
-/* .owl-item-first{
-    margin-left: 10rem !important;
-} */
-
-
-
-
-/* @media (min-width:768px){
-    .videos-controller{
-        width:990px;
-
-    }
-    .owl-item{
-        width: 560px !important;
-    }
-
-
-    .owl-stage{
-        width: 3500px !important;
-    }
-}
 
 @media (min-width:992px){
-    .videos-controller{
-        width: 1160px;
-        margin-right: -1rem;
-
+    .h-step-container{
+        height: 100vh;
     }
-    .owl-stage{
-        width: 3500px !important;
-    }
-}
-
-@media (min-width:1200px){
-    .videos-controller{
-        width: 1340px;
-        margin-right: -7rem;
-
-    }
-    .owl-stage{
-        width: 3500px !important;
-    }
-}
-@media (min-width:1400px){
-    .videos-controller{
-       width: 1520px;
-        margin-right: -1rem;
-    }
-    .owl-stage{
-        width: 3500px !important;
-    }
-} */
-
-@media (min-width:992px){
-
     .videos-controller{
         --a: 960px ;
         --b: calc(100vw - 960px);
@@ -1971,16 +1936,9 @@ section{
         padding-top: 3rem !important;
         padding-bottom: 3rem !important;
     }
-    .step-element{
-        position: absolute;
-        top: 0px;
-        height: 100%;
 
-    }
 
-    .h-step-container{
-        height: 100vh;
-    }
+
 
     .wb-swiper-h4{
         font-size: 22px;
@@ -1992,4 +1950,60 @@ section{
 
 .step-trigger{
     z-index: 5000 !important;
+}
+
+
+@media (min-width: 768px) and (max-width:992px){
+
+    .img-news {
+        height: 40px;
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    .profile-image-container {
+        width: 100%;
+    }
+    .container-img-ressource-methods{
+        height: 420px;
+    }
+    .step-element {
+        padding-top: 4rem !important;
+        padding-bottom: 4rem !important;
+    }
+    .card-price{
+        width: 50%;
+    }
+    .container-img-started-about {
+        width: 100%;
+        height: 500px;
+
+
+    }
+    .card-videos{
+        width: 80%;
+        height: 370px;
+    }
+
+    .wb-mw-md{
+        max-width: 600px;
+    }
+    .container-img-ressource-about{
+        width: 100%;
+    }
+}
+@media (min-width: 426px) and (max-width:767px){
+    .profile-image-container {
+        width: 100%;
+    }
+    .card-price{
+        width: 100%;
+    }
+    .container-img-started-about {
+        width: 100%;
+        height: 500px;
+
+    }
+    .container-img-ressource-about{
+        width: 100%;
+    }
 }
